# kzoinks

./: .gitignore  CMakeLists.txt  README.md  spec.txt
Source/: AppState.h  ChainStrip.cpp  ChainStrip.h  IModule.h  Main.cpp  MainComponent.cpp  MainComponent.h  ModuleRack.cpp  ModuleRack.h  ModuleRegistry.cpp  ModuleRegistry.h  ModuleWindow.h  OutputPanel.cpp  OutputPanel.h  SynthBaseModule.cpp  SynthBaseModule.h  SynthEngine.h  SynthVoice.cpp  SynthVoice.h
modules/arp/: ArpModule.cpp  ArpModule.h  CMakeLists.txt
modules/autowah/: AutoWahModule.cpp  AutoWahModule.h  CMakeLists.txt
modules/delay/: CMakeLists.txt  DelayModule.cpp  DelayModule.h
modules/distortion/: CMakeLists.txt  DistortionModule.cpp  DistortionModule.h
modules/eq/: CMakeLists.txt  EQModule.cpp  EQModule.h
modules/looper/: CMakeLists.txt  LooperModule.cpp  LooperModule.h
modules/oscilloscope/: CMakeLists.txt  OscilloscopeModule.cpp  OscilloscopeModule.h
modules/phaser/: CMakeLists.txt  PhaserModule.cpp  PhaserModule.h
modules/reverb/: CMakeLists.txt  ReverbModule.cpp  ReverbModule.h
modules/ringmod/: CMakeLists.txt  RingModModule.cpp  RingModModule.h
modules/stepseq/: CMakeLists.txt  StepSequencerModule.cpp  StepSequencerModule.h
modules/synth-base/: CMakeLists.txt  SynthBaseModule.cpp  SynthBaseModule.h
sdk/: IModule.h  ModuleRegistry.h  SynthParameters.h
sdk/module-template/: CMakeLists.txt  TemplateModule.cpp  TemplateModule.h
